# vxcc_v3

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md  build.c  build.sh  common.h  config.def.h  frontend_dev_doc.md  ir.md  main.c  opt.h  ssa.c  ssa.h  test.c  utils.h  website.html
.github/workflows/: analyze.yml  compile.yml  gnu_analyze.yml
asm/: etca.c  etca_ops.cdef  internal.c  internal.h  parser.c  ua16.c
cg/: cg.h
cg/x86/: constraints.c  info.txt  prep.c  x86.h
cg/x86_stupid/: cg.c  cg.h
cli/: cli.c
cli/argparse/: ORIGIN
common/: common.c  common.h  target_x86.cdef  targets.cdef  verify.c
ir/: analysis.c  builder.c  cir.h  dump.c  eval.c  fastalloc.c  ir.c  ir.h  lifetimes.c  llir.h  ops.cdef  ops.vxdef  opt.c  opt.h  passes.c  passes.h  serializer.h  transform.c  types.vxdef  verify.c  verify.h  verify_cir.c  verify_common.c  verify_ssa.c
ir/opt/: cmov.c  comparisions.c  constant_eval.c  dce.c  if_opts.c  inline_vars.c  join_compute.c  ll_binary.c  ll_jumps.c  ll_sched.c  ll_vars.c  loop_simplify.c  reduce_if.c  reduce_loops.c  remove_vars.c  simple_patterns.c  swap_if_cases.c  tailcall.c  vars.c
ir/transform/: cmov_expand.c  flatten.c  ll_finalize.c  ll_if_invert.c  lower_loops.c  normalize.c  regalloc.c  rets_to_args.c  share_slots.c  single_assign.c  single_assign_conditional.c  ssair_llir_lower.c
ir_c/: builder.c  cir.c  cir.h  verify.c
ir_c/transform/: normalize.c  single_assign.c
ir_ssa/: builder.c  cir.h  dump.c  eval.c  ir.md  opt.h  ssa.c  ssa.h  verify.c  verify_cir.c  verify_ssa.c
ir_ssa/opt/: comparisions.c  constant_eval.c  inline_vars.c  join_compute.c  loop_simplify.c  reduce_if.c  reduce_loops.c  remove_vars.c
ir_ssa/transform/: flatten.c  normalize.c  single_assign.c  single_assign_conditional.c
irparser/: a.out  core  match.c  parser.c  parser.h  serial.c  test.c
opt/: comparisions.c  inline_vars.c  join_compute.c  loop_simplify.c  remove_vars.c
plug/: plugin.c  plugin.h
s-expr/: README  ir_serial.c  sexpr.c  sexpr.h  test.c  test.s
targets/: targets.c  targets.cdef  targets.h  targets_internal.h
targets/etca/: etca.c
targets/rv32/: cg.c  elf.h  rv32.c  rv32.cdef
targets/x86/: cg.c  cg.h  flags.vxdef  llir_conditionals.c  ops.vxdef  x86.c  x86.cdef  x86.h  (+1 more)
tests/: addfirst4.c3  addfirst4.c3.s  asm_to_obj.sh  assignments.c3  assignments.c3.s  c3_to_ir.sh  cmp.c3  cmp.c3.s  coltwise_reduce_sum.c3  coltwise_reduce_sum.c3.s  eltwise_add.c3  eltwise_add.c3.s  ir_to_asm.sh  max1.c3  max1.c3.s  max2.c3  max2.c3.s  max3.c3  max3.c3.s  place1.c3  place1.c3.s  ptr.c3  ptr.c3.s  run.sh  strcpy.c3  strcpy.c3.s  sum.c3  sum.c3.s
(+3 files in other folders)
